content, images, colors updated

--- a/src/components/Stack.astro
+++ b/src/components/Stack.astro
@@ -1,4 +1,12 @@
-<div class="stack">
+---
+interface Props {
+  space?: number;
+}
+
+const { space } = Astro.props;
+---
+
+<div class="stack" style={space ? `--space: ${space}rem` : ""}>
   <slot />
 </div>
 
