--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,11 @@
 :root {
-  --font-size-sm: clamp(14px, 0vw + 14px, 14px);
-  --font-size-base: clamp(16px, 0vw + 15px, 19px);
-  --font-size-md: clamp(18px, 1vw + 15px, 25px);
-  --font-size-lg: clamp(20px, 2vw + 14px, 34px);
-  --font-size-xl: clamp(23px, 3vw + 13px, 45px);
-  --font-size-xxl: clamp(26px, 4vw + 10px, 60px);
-  --font-size-xxxl: clamp(29px, 6vw + 6px, 80px);
+  --font-size-sm: clamp(16px, 0vw + 17px, 14px);
+  --font-size-base: clamp(18px, 0vw + 18px, 19px);
+  --font-size-md: clamp(20px, 1vw + 18px, 25px);
+  --font-size-lg: clamp(23px, 1vw + 18px, 34px);
+  --font-size-xl: clamp(26px, 2vw + 17px, 45px);
+  --font-size-xxl: clamp(29px, 4vw + 15px, 60px);
+  --font-size-xxxl: clamp(32px, 5vw + 11px, 80px);
 
   --navy: #001f3f;
   --blue: #0074d9;
@@ -29,8 +29,8 @@
 }
 
 body {
-  background-color: #fff;
-  color: #444;
+  background-color: var(--black);
+  color: var(--white);
   font-family: Bahnschrift, "DIN Alternate", "Franklin Gothic Medium",
     "Nimbus Sans Narrow", sans-serif-condensed, sans-serif;
   font-size: var(--font-size-base);
@@ -43,6 +43,7 @@ body {
 
 .main-layout {
   display: grid;
+  gap: 5rem 0;
   grid-template-columns:
     [full-start] 1rem
     [main-start] 1fr [main-end]
@@ -53,7 +54,7 @@ body {
 
 @media (min-width: 768px) {
   .main-layout {
-    grid-gap: 5rem;
+    gap: 5rem;
     grid-template-columns:
       [full-start] minmax(1em, 1fr)
       [main-start] minmax(0, 56em) [main-end]
@@ -81,11 +82,11 @@ h5,
 h6,
 strong,
 b {
-  color: #222;
+  color: var(--silver);
 }
 
 a {
-  color: #3273dc;
+  color: var(--aqua);
 }
 
 nav a {
@@ -125,14 +126,6 @@ pre {
 
 pre > code {
   all: unset;
-}
-
-blockquote {
-  border: 1px solid #999;
-  color: #222;
-  font-style: italic;
-  margin: 0px;
-  padding: 2px 0px 2px 20px;
 }
 
 h1,
