--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -17,51 +17,25 @@
     margin: auto;
   }
   blockquote {
-    background-color: var(--white);
     border-left: 10px solid var(--gray);
     font-size: var(--font-size-base);
-    padding: 1.5rem 2rem;
+    font-style: italic;
+    margin: 0px;
+    padding: 1.5rem 2rem 1rem;
     position: relative;
   }
 
   blockquote:before {
-    color: #ccc;
+    color: var(--silver);
     content: "\201C";
     font-family: Arial, sans-serif;
     font-size: 4em;
-    /* line-height: 0.1em;
-    margin-right: 0.25em;
-    vertical-align: -0.4em; */
     position: absolute;
     left: 10px;
     top: -10px;
   }
 
   figcaption {
-    margin-top: 0.5rem;
+    margin-top: 1rem;
   }
-
-  /* blockquote {
-    width: 60%;
-    margin: 50px auto;
-    font-family: Open Sans;
-    font-style: italic;
-    color: #555555;
-    padding: 1.2em 30px 1.2em 75px;
-    border-left: 8px solid #78c0a8;
-    line-height: 1.6;
-    position: relative;
-    background: #ededed;
-  }
-
-  blockquote::before {
-    font-family: Arial;
-    content: "\201C";
-    color: #78c0a8;
-    font-size: 4em;
-  }
-
-  blockquote::after {
-    content: "";
-  } */
 </style>
