--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -90,4 +90,11 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
     </main>
     <Footer />
   </body>
+
+  <script
+    is:inline
+    src="https://cdn.usefathom.com/script.js"
+    data-site="HFQLYEKG"
+    defer
+  ></script>
 </html>
