update analytics script

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -93,7 +93,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
   <script
     is:inline
-    src="https://cdn.usefathom.com/script.js"
+    src="https://diamond-thirtytwo.edwardshambrook.com/script.js"
     data-site="HFQLYEKG"
     defer
   ></script>
