--- a/src/components/Quote.astro
+++ b/src/components/Quote.astro
@@ -13,11 +13,11 @@
 
 <style>
   figure {
-    max-width: var(--max-width);
-    margin: auto;
+    /* max-width: var(--max-width);
+    margin: auto; */
   }
   blockquote {
-    border-left: 10px solid var(--gray);
+    border-left: 10px solid var(--primary-color);
     font-size: var(--font-size-base);
     font-style: italic;
     margin: 0px;
@@ -26,7 +26,7 @@
   }
 
   blockquote:before {
-    color: var(--silver);
+    color: var(--text-color);
     content: "\201C";
     font-family: Arial, sans-serif;
     font-size: 4em;
