--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,49 +22,14 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
     <Header />
 
     <main>
-      <Stack space={10}>
-        <WorkExample
-          title="Puzzles and Survival"
-          headingColor="teal"
-          alignImage="right"
-        >
-          <img slot="media" src="puzzles-and-survival-01.jpeg" />
-          <p slot="description">
-            Puzzles and Survival is a popular mobile game that combines
-            puzzle-solving with the need to survive in a post-apocalyptic world.
-            As a writer for the game, I worked on a number of limited-time
-            events and a lot of the in-game dialogue.
-          </p>
-        </WorkExample>
-
-        <WorkExample title="Ant Legion" headingColor="yellow">
-          <img slot="media" src="ant-legion-01.jpeg" />
-          <p slot="description">
-            Ant Legion is a mobile strategy game in which players build and
-            manage an ant colony. As a writer for Ant Legion, I helped to
-            develop the game's story, dialogue, characters, and world.
-          </p>
-        </WorkExample>
-
-        <WorkExample title="Mem" alignImage="right" headingColor="orange">
-          <img slot="media" src="mem-01.jpeg" />
-          <p slot="description">
-            Mem is a play that tells the story of Matthias Wolfenden, a
-            billionaire who isolates himself on a desert island, where he
-            explores his past and present while discovering his true self.
-          </p>
-        </WorkExample>
-
-        <WorkExample title="Design Island" headingColor="yellow">
-          <img slot="media" src="design-island-01.jpeg" />
-          <p slot="description">
-            Design Island is a mobile game developed by Funplus, where players
-            build and decorate their own island. As a writer for the game, I was
-            primarily responsible for creating social media copy, developing
-            future plotlines, and writing for limited-time events.
-          </p>
-        </WorkExample>
-
+      <Stack>
+        <p>
+          Having worked as a narrative designer and writer with two years of
+          experience in the gaming industry, I have worked on a variety of
+          titles spanning a wide array of genres. Going forward, I would love to
+          utilize my passion for AI development to create narrative-driven
+          experiences.
+        </p>
         <Quote>
           <p>
             A passionate and skilful proofreader and narrative designer,
