fix broken images

--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -12,6 +12,9 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
   .main-layout {
     margin-block-start: 10vh;
   }
+  h3 {
+    margin-block-end: 2rem;
+  }
 </style>
 
 <html lang="en">
@@ -40,7 +43,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
           <div>
             <img
-              src="puzzles-and-survival-01.jpeg"
+              src="/puzzles-and-survival-01.jpeg"
               alt="Promotional image for Puzzles and Survival game"
             />
             <div>
@@ -56,7 +59,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
         >
           <div slot="media">
             <img
-              src="ant-legion-01.jpeg"
+              src="/ant-legion-01.jpeg"
               alt="Promotional image for Ant Legion game"
             />
           </div>
@@ -81,7 +84,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
             full access, please message me at edwardshambrook@googlemail.com.
           </p>
           <div slot="media">
-            <img src="mem-01.jpeg" alt="Promotional image for the play Mem" />
+            <img src="/mem-01.jpeg" alt="Promotional image for the play Mem" />
           </div>
         </WorkExample>
 
@@ -99,7 +102,7 @@ import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
 
           <div slot="media">
             <img
-              src="design-island-01.jpeg"
+              src="/design-island-01.jpeg"
               alt="Promotional image for Design Island game"
             />
           </div>
